Bug 467006 - a seperate cross cursor appears aligned with the cursor on the canvas
Summary: a seperate cross cursor appears aligned with the cursor on the canvas
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Compiled Sources All
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-03-07 12:13 UTC by acc4commissions
Modified: 2023-04-13 13:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
capture (1.24 MB, video/mp4)
2023-03-07 12:13 UTC, acc4commissions
Details

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2023-03-07 12:13:13 UTC
Created attachment 157082 [details]
capture

SUMMARY
git afea272
It happened in the previous builds as well.

STEPS TO REPRODUCE
1. open or create a document 
2. select freehand brush tool
3. move it around on the canvas

Note that it might not be visible or visible depending on the zoom level and the window size of krita.

OBSERVED RESULT
a seperate cross cursor appears on the top left, moving towards the same direction as the real cursor moves. (But it doesn't seem to move the same 'distance')

EXPECTED RESULT
It shouldn't be there. (I guess)

SOFTWARE/OS VERSIONS
Windows: Win10 x64
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION

So far it's just a cosmetical issue and it doesn't affect the performance at all. But I thought I'd report it just in case.
Comment 1 acc4commissions 2023-03-07 13:05:00 UTC
It seems that how/where the second (cross) cursor appears differs based on 
- brush size
- whether the 'Map the displayed canvas size' button on the bottom right coner is ticked
- zoom level
etc

It's very easily visible when the brush size is maximum 1000px.
Comment 2 tomtomtomreportingin 2023-03-12 19:12:04 UTC
Can confirm. I believe this crosshair is intended to be shown only when the brush preview outline is larger than the viewport.
Comment 3 Lynx3d 2023-03-13 14:29:29 UTC
I think this is related to the changes that caused bug 465086, but I'm not sure if it really has the same root cause.
Comment 4 Dmitry Kazakov 2023-04-13 13:50:08 UTC
Git commit 86312477b451bc774d463f1228b671d28610faac by Dmitry Kazakov.
Committed on 13/04/2023 at 13:49.
Pushed by dkazakov into branch 'master'.

Fix outline issues caused by the optimized outline refactoring
Related: bug 455570, bug 465086

M  +2    -2    libs/image/brushengine/KisOptimizedBrushOutline.cpp

https://invent.kde.org/graphics/krita/commit/86312477b451bc774d463f1228b671d28610faac