Fix outline issues caused by the optimized outline refactoring

BUG:467006
BUG:455570
BUG:465086